Consolidating markdowns from entire team
Adding Mustafa's and Matthew's markdown writing to the master jupyter notebook

--- a/Final Project Section5-Team 4.ipynb
+++ b/Final Project Section5-Team 4.ipynb
@@ -13,6 +13,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a0fc36f-21c0-4827-afef-ee5928617f92",
+   "metadata": {},
+   "source": [
+    "This line sets the TRANSFORMERS_NO_TF environment variable to \"1\", ensuring that Hugging Face Transformers avoids using TensorFlow and instead defaults to PyTorch. This is especially important in environments where both are installed but we want to exclusively use PyTorch.\n",
+    "\n",
+    "The environment is now configured to use only PyTorch with the Transformers library."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "ab3c7e44-2d7a-4f47-9972-da699c354ef5",
@@ -412,6 +422,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13748d07-ed4b-40ee-9e14-e5e1d229f673",
+   "metadata": {},
+   "source": [
+    "The output highlights columns with significant missing values. Fields with too much missing data might need to be dropped or carefully imputed, depending on their relevance. This informs our data cleaning strategy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "89fffcef-4552-4cad-9f23-7979e15910d0",
@@ -558,6 +576,10 @@
    "id": "7e3c3166-08f4-453c-9f81-946f1bbbc31d",
    "metadata": {},
    "source": [
+    "This code identifies outliers in text length features using the 95th percentile as a threshold and creates box plots for visualization. The 95th percentile method flags the top 5% of values as potential outliers, which are then stored in binary indicator columns for future use.\n",
+    "\n",
+    "The box plots reveal distinct patterns across the four text length features, with title length showing a tight distribution around 30 characters and minimal outliers indicating consistent formatting practices, while description length exhibits the widest variation with a median near 1,000 characters and numerous extreme outliers exceeding 10,000 characters. Requirements length demonstrates moderate spread with a median around 600 characters and some outliers beyond 6,000 characters, and company profile length displays high variability similar to descriptions with a median around 700 characters and outliers extending past 4,000 characters. These results indicate that job descriptions and company profiles have the most variable content length while titles remain consistently concise, with outliers potentially representing either comprehensive job postings or data quality issues that should be addressed in preprocessing.\n",
+    "\n",
     "The text length distribution does provide a clearer picture of these job fields and shows that job descriptions are generally longer than job requirements and company profiles. Nothing suprising with majority of job ittles lower than 60 characters with some outlier job titles being longer than 80 characters. Those may be questionable jobs. The large number of job descriptions and job requirements with character lengths close to zero is alarming which indicates there are many job postings without these fields. We could consider makingn these fields required in order for the job to be posted on our website in order to ensure more quality job posts are being posted for job seekers. "
    ]
   },
@@ -900,6 +922,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6cdccb4e-d581-43f5-a839-95ecdf2dbd03",
+   "metadata": {},
+   "source": [
+    "The output shows the first five rows of the prepared dataset, revealing the structure of legitimate job postings (fraudulent = 0) in the sample. The descriptions demonstrate typical job posting content including company information, job requirements, and application instructions. This streamlined dataset focuses on the core text classification task by using only the job description as the primary feature, which is appropriate for transformer-based models like DistilBERT that excel at understanding contextual meaning in text data. The binary target encoding (0 for legitimate, 1 for fraudulent) provides a clear classification framework for the fraud detection model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "181efe9c-e39b-4ee4-a185-20dd9684ec48",
@@ -985,6 +1015,14 @@
     "print(\"Train size:\", len(train_dataset))\n",
     "print(\"Validation size:\", len(val_dataset))\n",
     "print(\"Test size:\", len(test_dataset))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4460928-235f-4ace-8af9-fa2dd50812d3",
+   "metadata": {},
+   "source": [
+    "The dataset split results show a well-balanced distribution with 14,304 training samples, 1,788 validation samples, and 1,788 test samples, confirming the intended 80/10/10 split ratio. This distribution provides sufficient training data for the DistilBERT model while reserving adequate samples for validation during training and final evaluation on the test set. The stratified splitting ensures that the class distribution of fraudulent vs. legitimate job postings is maintained across all three splits, which is crucial for reliable model evaluation and preventing overfitting to class imbalances. The batch size of 16 is appropriate for DistilBERT training, balancing computational efficiency with gradient stability."
    ]
   },
   {
@@ -1162,6 +1200,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "233bccb4-ed61-437c-9d91-cc25b3f10759",
+   "metadata": {},
+   "source": [
+    "The code sets up a comprehensive training configuration with accuracy as the evaluation metric, defines a custom compute_metrics function to calculate predictions from model logits, configures training parameters including 3 epochs with a learning rate of 5e-5 and weight decay for regularization, and uses a WeightedLossTrainer to handle class imbalance in the fraud detection dataset.\n",
+    "\n",
+    "Result analysis:- The training output shows successful model convergence over 3 epochs with progressive improvement in both training and validation metrics. The training loss decreased consistently from 0.647800 in epoch 1 to 0.147100 in epoch 3, indicating effective learning. Validation loss also improved from 0.484492 to 0.470298, while validation accuracy increased from 97.43% to 97.93%, demonstrating strong generalization performance. The final training metrics show excellent results with a total of 2,682 training steps completed, achieving a final training loss of 0.375783 and processing 35,915 samples per second. The model's ability to achieve over 97% validation accuracy suggests it has learned to effectively distinguish between legitimate and fraudulent job postings, with the WeightedLossTrainer successfully addressing the class imbalance challenge inherent in fraud detection tasks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5506a2-0b5f-4d64-b592-9c05c6cf9cf4",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "b4a3ae30-e07a-4c61-94d2-c2ab17595fb1",
@@ -1207,6 +1263,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "354db812-81d6-4374-9813-3d479a24e566",
+   "metadata": {},
+   "source": [
+    "The code creates a confusion matrix using scikit-learn's confusion_matrix function and visualizes it as a heatmap with seaborn, displaying the counts of true positives, true negatives, false positives, and false negatives for the binary classification task.\n",
+    "\n",
+    "The classification report reveals excellent model performance with 1681 correctly classified legitimate job postings (true negatives) and 72 correctly identified fraudulent postings (true positives), while showing minimal misclassification with only 21 legitimate jobs incorrectly flagged as fraudulent (false positives) and 14 fraudulent jobs missed (false negatives). This results in high precision for fraud detection and demonstrates the model's ability to effectively distinguish between legitimate and fraudulent job postings with minimal false alarms, which is crucial for practical deployment where false positives could impact legitimate job seekers and employers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "5863138d-de51-4f3a-8414-547c4d554845",
@@ -1239,179 +1305,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400ba434-fa76-4e97-9d57-52cca357c6cd",
+   "id": "68618687-9e6e-4c19-b6b8-268fa4964f82",
    "metadata": {},
    "source": [
-    "# Matthew's Model Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d0c3a07-20cb-48e7-955c-000535426b20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Stopwords list\n",
-    "stopwords = set([\n",
-    "    \"a\", \"an\", \"the\", \"and\", \"or\", \"but\", \"if\", \"while\", \"with\", \"without\",\n",
-    "    \"in\", \"on\", \"at\", \"to\", \"from\", \"by\", \"for\", \"of\", \"as\", \"is\", \"are\", \"was\",\n",
-    "    \"were\", \"be\", \"been\", \"being\", \"this\", \"that\", \"these\", \"those\", \"it\", \"its\",\n",
-    "    \"he\", \"she\", \"they\", \"them\", \"his\", \"her\", \"their\", \"you\", \"your\", \"we\", \"us\"\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "898f77ce-6845-4f99-8573-44219c91c7b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clean text\n",
-    "def preprocess_text(text):\n",
-    "    text = text.lower()\n",
-    "    tokens = re.findall(r'\\b[a-z]{2,}\\b', text)\n",
-    "    return ' '.join([t for t in tokens if t not in stopwords])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6078657b-4acc-4c23-99a4-386f522a2bb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Prepare input text\n",
-    "df['text'] = df[['description', 'requirements', 'company_profile']].fillna('').agg(' '.join, axis=1)\n",
-    "df['clean_text'] = df['text'].apply(preprocess_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ade9684-ff22-460e-b81b-44874d7578e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load Hugging Face model and tokenizer\n",
-    "print(\"Loading transformer model...\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
-    "model = AutoModel.from_pretrained(\"distilbert-base-uncased\")\n",
-    "model.eval()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9c54d2d-6dc1-4cf6-96fa-5bc674a27b0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to get mean pooled embedding\n",
-    "def get_embedding(text):\n",
-    "    inputs = tokenizer(text, return_tensors='pt', truncation=True, padding=True, max_length=128)\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**inputs)\n",
-    "    return outputs.last_hidden_state.mean(dim=1).squeeze().numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d17688d6-a3b7-4495-b60f-5939bd46eafa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate embeddings for each job posting\n",
-    "print(\"Generating embeddings...\")\n",
-    "embeddings = np.vstack([get_embedding(text) for text in tqdm(df['clean_text'])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8fad476-441e-490f-a07a-e5e95211f28b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TF-IDF feature extraction\n",
-    "print(\"Extracting TF-IDF features...\")\n",
-    "tfidf_vectorizer = TfidfVectorizer(max_features=1000)\n",
-    "tfidf_features = tfidf_vectorizer.fit_transform(df['clean_text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "384848de-1606-4179-989f-f5fa854e4e45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LDA topic modeling\n",
-    "print(\"Running LDA topic modeling...\")\n",
-    "count_vectorizer = CountVectorizer(max_features=1000)\n",
-    "count_matrix = count_vectorizer.fit_transform(df['clean_text'])\n",
-    "lda_model = LatentDirichletAllocation(n_components=10, random_state=42)\n",
-    "lda_topics = lda_model.fit_transform(count_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "010779f9-3ef6-4999-9304-70b823be92ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Combine features\n",
-    "print(\"Combining features...\")\n",
-    "X_combined = hstack([tfidf_features, lda_topics, embeddings])\n",
-    "y = df['fraudulent']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb6a0b4f-e4c7-4475-8fe5-5491e14ce220",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train/test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_combined, y, stratify=y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fe56818-77ed-4b92-8043-0b7a7862917a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train classifier\n",
-    "print(\"Training classifier...\")\n",
-    "clf = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
-    "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37e1e49d-ff8d-4f26-9811-6fa611ce2c5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predictions and report\n",
-    "y_pred = clf.predict(X_test)\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d5506a2-0b5f-4d64-b592-9c05c6cf9cf4",
-   "metadata": {},
-   "source": [
-    "# Evaluation"
+    "Evaluate how the DISTILBERT model meets the business objective of identifying fake job postings:\n",
+    "\n",
+    "- (1) The job descriptions are written in human language and analyzing them requires understanding of semantics. DistilBERT is pre-trained for this and was built to understand the semantic meaning in these types of sentences.\n",
+    "- (2)DistilBERT was designed to operate faster and more efficiently than larger transformer models designed for this type of tasking, such as BERT. This works well for our business objective because it would offer lower cost deployment. By being more lightweight it also provides us with accurate results, but in a more timely manner, offering real time predictions. ((Sanh et al., 2020)\n",
+    "- (3)It leverages Hugging Face Trainer API. The use of the Trainer API offers pre-built structures for backpropagation, evaluation, etc. This pre-built solution helps decrease the amount of code implementation time, allowing the user to focus more on interpreting the data with metrics rather than maintaing or implementing the low level training infrastructure."
    ]
   },
   {
@@ -1431,9 +1332,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3c8d790-fa26-45ea-ad10-b03cb3c3ecd4",
+   "metadata": {},
+   "source": [
+    "When deploying this solution for actual use, we would implement various solutions:\n",
+    "\n",
+    "- Data Presentation, Front End, and User Interface: Though the code contains a heatmap to better visualize the output, the smaller size of DistilBERT makes it easier to deploy to the web or a mobile app. For the actual use of this solution, it would be ideal to create a dashboard that would better present the data to those responsible for actually analyzing the result data. For example, a Python script could be used to export this data to our HR department to be used to flag fake job postings.\n",
+    "- Retraining: Also, this code only relies on the .csv file of fake job postings that we provided. It would be ideal to create a script to automatically send new job posting data from a database to this code to retrain on the new data.\n",
+    "- Human Interpretability: Though the code finds both fake and real job postings, it does not visually show what examples for both instances. Based off of the output, it would be ideal to add code that would generate examples of both fake and real job postings that could be sent to the dashboard for use by human analyzers focused on business logic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f1686d-76ef-4fb6-b493-90f88b5f3074",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcb9eedd-ee5b-4fa1-b1a5-66a4b15a8d1b",
+   "metadata": {},
+   "source": [
+    "Sanh, V., Debut, L., Chaumond, J., & Wolf, T. (2020, February 29). DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter. ArXiv.org. https://doi.org/10.48550/arXiv.1910.01108"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d2aaee-d96f-43b1-ab0f-4bf21fd9752a",
+   "id": "dca70fa7-fa50-4d54-9c32-2ec1d5bfe8b3",
    "metadata": {},
    "outputs": [],
    "source": []
